<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:orientation="vertical">

        <fontsproject.Raleway_Regular_TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="OPÇÕES"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="18sp" />

        <fontsproject.Raleway_Medium_TextView
            android:id="@+id/id_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:text="@string/profile"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />

        <fontsproject.Raleway_Medium_TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/shop"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />

        <fontsproject.Raleway_Medium_TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/help"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />

        <fontsproject.Raleway_Medium_TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/signout"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>