<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".SignInActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splah_bg" />

    <fontsproject.Raleway_Bold_TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/restaurant"
        android:textColor="@color/colorDarkRed"
        android:textSize="40sp" />


    <LinearLayout
        android:id="@+id/id_signIn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/id_Orders"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_button"
            android:text="@string/callWaiter"
            android:textColor="@color/colorDarkRed" />

        <Button
            android:id="@+id/id_Menu"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_button"
            android:text="@string/menu"
            android:textColor="@color/colorDarkRed" />

    </LinearLayout>

</RelativeLayout>