<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".CallWaiter">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splah_bg" />

    <fontsproject.Raleway_Bold_TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/restaurant"
        android:textColor="@color/colorDarkRed"
        android:textSize="40sp" />


    <LinearLayout
        android:id="@+id/id_signIn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <fontsproject.Montserrat_Light_TextView
            android:id="@+id/id_body_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/waiterMessage"
            android:textColor="@color/secondaryTextColor"
            android:textSize="24sp"
            android:gravity="center" />

        <Button
            android:id="@+id/id_MainBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_button"
            android:text="@string/back"
            android:textColor="@color/colorDarkRed" />

    </LinearLayout>

</RelativeLayout>